--- a/application.yaml
+++ b/application.yaml
@@ -7,7 +7,8 @@ spec:
   project: default
 
   source:
-    repoURL: https://gitlab.com/nanuchi/argocd-app-config.git
+    # repoURL: https://gitlab.com/nanuchi/argocd-app-config.git
+    repoURL: https://github.com/adriankkk/argo.git
     targetRevision: HEAD
     path: dev
   destination:
