--- a/application.yaml
+++ b/application.yaml
@@ -19,6 +19,7 @@ spec:
     syncOptions: # tworzy automatycznie namespace argo-apps
     - CreateNamespace=true
 
-    automated: # auto fetch
-      selfHeal: true
-      prune: true
+    automated: # automaticly sync any changes to git repository | every 3min !
+    # alternatyma to WEBHOOK gitrepo <> argocd
+      selfHeal: true # if changes to cluster are manually, argo will revert them and sync with actuall repository
+      prune: true # if in repo yaml are removed, argo will remove this component in cluster as well
