--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -5,15 +5,15 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: argo-app1-deployment
+      app: my-app
   replicas: 2
   template:
     metadata:
       labels:
-        app: argo-app1-deployment
+        app: my-app
     spec:
       containers:
-      - name: argo-app1-deployment
+      - name: my-app
         image: nanajanashia/argocd-app:1.0
         ports:
         - containerPort: 8080
