--- a/busybox/deployment.yaml
+++ b/busybox/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: busybox
-        image: docker.io/library/busybox:latest
+        image: docker.io/library/hello-world:latest
         ports:
         - containerPort: 8080
