--- a/application-redis.yaml
+++ b/application-redis.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: busybox
+  name: redis # glowna nazwa aplikacji
   namespace: argocd
 spec:
   project: nana
